package assignment_4.model;

public abstract class BaseEntity {
    protected int id;
    protected String name;

    protected BaseEntity(int id, String name) {
        this.id = id;
        this.name = name;
    }

    public abstract String getEntityType();
    public abstract String toDisplayString();

    public int getId() { return id; }
    public void setId(int id) { this.id = id; }

    public String getName() { return name; }
}
